[gd_scene load_steps=13 format=3 uid="uid://cf3ndxuss7pqy"]

[ext_resource type="PackedScene" uid="uid://bsen1fu6niug3" path="res://Player.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cx2x5lnlce1n4" path="res://Mob.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://buu0ryxkqwk8f" path="res://fonts/Montserrat-Medium.ttf" id="4"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="5"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_55rkt"]
albedo_color = Color(1, 0.160784, 1, 1)
emission = Color(1, 0.768627, 0.670588, 1)

[sub_resource type="CylinderMesh" id="3"]
material = SubResource("StandardMaterial3D_55rkt")

[sub_resource type="Curve3D" id="5"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13, 1, -13, 0, 0, 0, 0, 0, 0, 13, 1, -13, 0, 0, 0, 0, 0, 0, 13, 1, 16, 0, 0, 0, 0, 0, 0, -13, 1, 16, 0, 0, 0, 0, 0, 0, -13, 1, -13),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="7"]
default_font = SubResource("6")

[node name="Main" type="Node"]
script = ExtResource("2")
mob_scene = ExtResource("3")

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.12834, 0)
mesh = SubResource("2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.727904, 0.685679, 0, -0.685679, 0.727904, 0, 19.9939, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1")]

[node name="CameraPivot" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.618436, 0.785835, 0, -0.785835, 0.618436, 0, 24.0642, 19.4708)
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 1, -13)
mesh = SubResource("3")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 1, -13)
mesh = SubResource("3")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 1, 16)
mesh = SubResource("3")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 1, 16)
mesh = SubResource("3")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("5")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -13, 1, -13)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("7")

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 25.0
offset_top = 20.0
offset_right = 154.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.25098, 0.0705882, 0.27451, 1)
text = "Score: 0"
script = ExtResource("5")

[node name="Retry" type="ColorRect" parent="UI"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0745098, 0.0745098, 0.0745098, 0.580392)

[node name="Label" type="Label" parent="UI/Retry"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -14.0
offset_right = 106.0
offset_bottom = 14.0
text = "Press enter to retry"

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
